Logo spacing fix

--- a/css/index.css
+++ b/css/index.css
@@ -182,9 +182,9 @@ img {
 }
 .header-content .left-logo {
   font-size: 2rem;
-  letter-spacing: 0.55px;
+  letter-spacing: 10px;
   transform: rotate(90deg);
-  padding: 25px 0 0 8px;
+  padding: 15px 0 0 15px;
 }
 @media (max-width: 500px) {
   .header-content {
