--- a/less/home-page.less
+++ b/less/home-page.less
@@ -5,9 +5,9 @@
 
   .left-logo {
     font-size: 2rem;
-    letter-spacing: 0.55px;
+    letter-spacing: 10px;
     transform: rotate(90deg);
-    padding: 25px 0 0 8px;
+    padding: 15px 0 0 15px;
   }
 
   @media @mobile {
@@ -20,7 +20,6 @@ h1 {
   color: @white;
   font-weight: 300;
   text-transform: uppercase;
-  // padding: 10rem 6rem;
   line-height: 1;
   letter-spacing: 10px;
 
